fix(profile): page overflow (#241)

--- a/packages/earth-map/src/styles/_base.scss
+++ b/packages/earth-map/src/styles/_base.scss
@@ -45,7 +45,7 @@ body {
 }
 
 .ng-user-profile-container {
-  height: 100vh;
+  min-height: 100vh;
   overflow-y: auto;
   width: 100%;
 
